--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -109,6 +109,7 @@
       flex-grow: 1;
       position: relative;
       height: 100%;
+      max-height: 900px;
       z-index: 99;
       pointer-events: none;
 
