--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -1,41 +1,40 @@
-.cart{
+.cart {
   @include flex(flex-start, flex-start);
 
-  @include mobile{
+  @include mobile {
     flex-wrap: wrap;
   }
 
-  &_info{
+  &_info {
     // width: 40%;
     margin-right: 30px;
-    margin-top: 30px;
     padding: 20px;
     box-shadow: $box-shadow;
     position: sticky;
     top: calc(#{$header-shrink-height} + 20px);
 
-    @include mobile{
+    @include mobile {
       width: 100%;
       margin-right: 0;
       margin-bottom: 30px;
       position: unset;
     }
 
-    &_txt{
-      & > * {
+    &_txt {
+      &>* {
         margin-bottom: 10px;
       }
 
-      p{
+      p {
         font-size: 1.25rem;
       }
 
-      &_price{
-        @include flex(center,space-between);
+      &_price {
+        @include flex(center, space-between);
         padding: 10px 0;
         font-size: 1.25rem;
 
-        span:nth-child(2){
+        span:nth-child(2) {
           font-size: 2rem;
           color: $main-color;
           font-weight: 600;
@@ -43,59 +42,60 @@
       }
     }
 
-    &_btn > *{
+    &_btn>* {
       margin-bottom: 20px;
     }
   }
 
-  &_list{
+  &_list {
     flex-grow: 1;
   }
 
-  &_item{
-    @include flex(center,flex-start);
+  &_item {
+    @include flex(center, flex-start);
     margin-bottom: 20px;
 
-    &_image{
+    &_image {
       margin-right: 20px;
 
-      img{
+      img {
         height: 150px;
       }
     }
 
-    &_info{
-      @include flex(center,space-between);
+    &_info {
+      @include flex(center, space-between);
       flex-grow: 1;
 
-      @include mobile{
-        @include flex(flex-start,center);
+      @include mobile {
+        @include flex(flex-start, center);
         flex-direction: column;
 
-        & > *{
+        &>* {
           margin-bottom: 10px;
         }
       }
 
-      &_name{
+      &_name {
         width: 40%;
 
-        @include mobile{
+        @include mobile {
           width: 100%;
         }
       }
 
-      &_name,&_price{
+      &_name,
+      &_price {
         font-size: 1.25rem;
       }
 
-      &_del{
+      &_del {
         font-size: 1.5rem;
 
-        i{
+        i {
           cursor: pointer;
 
-          &:hover{
+          &:hover {
             color: $main-color;
           }
         }
