--- a/app-shell/src/sass/components/_contact.scss
+++ b/app-shell/src/sass/components/_contact.scss
@@ -22,7 +22,7 @@
 
 .other {
   width: 60%;
-  background-image: url(https://images.unsplash.com/photo-1485119584289-30ca2b38c67e?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=);
+  // background-image: url(https://images.unsplash.com/photo-1485119584289-30ca2b38c67e?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -49,17 +49,20 @@
   flex-direction: column;
   align-items: flex-end;
 }
+
 .form h1 {
   text-align: center;
   margin-bottom: 20px;
   width: 100%;
 }
+
 .form form {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
+
 .flex-rev {
   display: flex;
   flex-direction: column-reverse;
@@ -82,9 +85,11 @@
   outline-width: thin;
   -webkit-appearance: none;
 }
+
 .flex-rev textarea {
   height: 150px;
 }
+
 button {
   -webkit-appearance: none;
   margin-right: 0;
@@ -94,6 +99,7 @@ button {
   position: relative;
   padding: 20px;
 }
+
 .info h2 {
   color: #16f1dc;
   font-size: 34px;
@@ -145,19 +151,23 @@ button {
     padding: 10px 0 0;
     display: block;
   }
+
   .map {
     display: none;
   }
+
   .contact {
     width: 100%;
     flex-direction: column-reverse;
     border-radius: 0;
     box-shadow: 0px 0px 0px 0px;
   }
+
   .other {
     width: 100%;
     padding: 20px 0;
   }
+
   .form {
     width: 100%;
   }
@@ -174,6 +184,7 @@ button {
     opacity: 1;
     pointer-events: initial;
   }
+
   nav div.linkWrapper {
     top: 0;
     right: 0;
